site/public/css/officeHoursQueue.css
/* Hides elements on the page before they have been fully loaded */
/* stylelint-disable-next-line selector-class-pattern */
.page_loading {
    visibility: hidden;
}

td {
    vertical-align: middle;
}

th {
    vertical-align: middle;
}

/* stylelint-disable-next-line selector-class-pattern */
.filter_btn {
    margin-bottom: 0.5rem;
}

/* stylelint-disable selector-class-pattern */
.current_queue_row,
.current_queue_row a > i.fas {
    color: var(--btn-text-black);
}
/* stylelint-enable selector-class-pattern */

.announcement-setting {
    min-height: 7em;
    flex: 1 0 auto;
    margin: 0 0 1em;
    width: 100%;
}

#announcement {
    background-color: var(--standard-light-gray);
    padding: 0.75rem;
}

[data-theme="dark"] #announcement {
    background-color: var(--standard-dark-gray);
}

/* stylelint-disable-next-line selector-id-pattern */
#contact_info {
    width: 620px;
}

.fully-transparent {
    /* stylelint-disable-next-line declaration-no-important */
    background: transparent !important;
    /* stylelint-disable-next-line declaration-no-important */
    color: var(--default-black) !important;
}

.filter-buttons {
    color: var(--btn-text-black);
}

.filter-buttons:hover,
.filter-buttons:focus {
    opacity: 0.8;
}

.queue-message {
    /* display: none; */
    background-color: var(--alert-info-blue);
    padding: 1rem;
}

/*
  This will hide elements on phones. This is useful for extra content that
  is not normally needed such as a user id
*/
@media only screen and (max-width: 479px) {
    /* Put this on elements you dont need on mobile */
    .mobile-hide {
        /* stylelint-disable-next-line declaration-no-important */
        display: none !important;
    }

    /* stylelint-disable-next-line selector-class-pattern */
    .finish_helping_btn {
        white-space: normal;
        width: 5rem;
    }

    /* stylelint-disable-next-line selector-class-pattern */
    .filter_settings_btn {
        width: 4rem;
    }

    .content {
        padding: 20px;
    }
}

/* Put this on elements you dont need on desktop */
@media only screen and (min-width: 480px) {
    .desktop-hide {
        /* stylelint-disable-next-line declaration-no-important */
        display: none !important;
    }
}

#student-queue-table {
    margin-top: 15px;
}

#student-queue-table > caption {
    padding: 5px;
    border: 1px solid var(--standard-light-gray);
    font-weight: 600;
}

#times-helped-cell {
    background-color: var(--standard-vibrant-green);
}

.queue-removed-nicknames {
    margin-top: 1em;
}

